--- a/src/components/searchBar/SearchBar.module.css
+++ b/src/components/searchBar/SearchBar.module.css
@@ -1,7 +1,3 @@
-.root {
-    --primary-color: #339af0;
-    --white-color: #fff;
-}
 
 .searchForm{
     max-height: 2rem;
@@ -19,7 +15,7 @@
 }
 
 .label.open {
-    background-color: var(--white-color);
+    background-color: #ffffff27;
 }
 
 .input {
@@ -53,16 +49,16 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    color: var(--white-color);
+    color: #ffffff69;
     transition: color 0.3s ease;
 }
 
 .button:hover {
-    color: var(--primary-color);
+    color: #339af0;
 }
 
 .label.open .button {
-    color: #000;
+    color: #339af0;
 }
 
 .button svg {
@@ -77,13 +73,13 @@
     background: none;
     border: 0;
     outline: 0;
-    color: var(--primary-color);
     font-size: 1.2rem;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: color 0.3s ease;
+    fill: #339af0;
 }
 
 .closeButton svg {
