--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,10 +42,11 @@ body {
   height: 100%;
   margin: 0;
   overflow: hidden;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
 body {
-  /* background-image: url('/bkgr.jpg'); */
   background-color: #111;
   background-size: cover;
   background-repeat: no-repeat;
@@ -53,6 +54,7 @@ body {
   background-attachment: fixed;
   display: flex;
   flex-direction: column;
+
 }
 
 #app-container {
@@ -115,6 +117,44 @@ body {
 .bg-neon-green {
   background-color: #00ffcc;
   animation: pulse 2s infinite alternate;
+}
+
+/* бургер */
+
+.hamburger {
+  cursor: pointer;
+}
+
+.hamburger input {
+  display: none;
+}
+
+.hamburger svg {
+  height: 3em;
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line {
+  fill: none;
+  stroke: white;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 3;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+              stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line-top-bottom {
+  stroke-dasharray: 12 63;
+}
+
+.hamburger input:checked + svg {
+  transform: rotate(-45deg);
+}
+
+.hamburger input:checked + svg .line-top-bottom {
+  stroke-dasharray: 20 300;
+  stroke-dashoffset: -32.42;
 }
 
 
